# pocket-watch

./: .gitignore  BATTERY_OPTIMIZATIONS.md  BOARD.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/bsp_extra/: CMakeLists.txt
components/bsp_extra/src/: bsp_board_extra.c
components/esp_lvgl_adapter/include/: esp_lv_adapter.h
components/esp_lvgl_adapter/src/adapter/: adapter_internal.h  esp_lv_adapter.c
components/waveshare__esp32_s3_touch_lcd_1_85B/: CMakeLists.txt  Kconfig  esp32_s3_touch_lcd_1_85B.c  idf_component.yml
components/waveshare__qmi8658/include/: qmi8658.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/app_alarm/: alarm.c  alarm.h
main/app_clock/: lvgl_alarm_settings.c  lvgl_alarm_settings.h  lvgl_alarm_volume.c  lvgl_alarm_volume.h  lvgl_clock.c  lvgl_clock.h  lvgl_clock_face_settings.c  lvgl_clock_face_settings.h  lvgl_device_status.c  lvgl_device_status.h  lvgl_screen_brightness.c  lvgl_screen_brightness.h  lvgl_screen_power_button.c  lvgl_screen_power_button.h  lvgl_theme_settings.c  lvgl_theme_settings.h  lvgl_time_settings.c  lvgl_time_settings.h  lvgl_timer.c  lvgl_timer.h
main/app_msg/: sys_msg_ui.c  sys_msg_ui.h
main/app_msg/submenu_ui/: set_bat_msg.c  set_bat_msg.h  set_wifi_service.c  set_wifi_service.h
main/app_net/: wifi_credentials.h.example  wifi_driver.c  wifi_driver.h  wifi_time_sync.c  wifi_time_sync.h
main/app_rtc/: rtc.c  rtc.h
main/app_theme/: app_theme.c  app_theme.h
main/app_timer/: timer.c  timer.h
(+3 files in other folders)
